--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.datasource.url = jdbc:${DATABASE_URL}
 spring.datasource.username=${USER}
 spring.datasource.password=${PASSWORD}
+#spring.datasource.url = jdbc:mysql://localhost:3306/itau?useTimezone=true&serverTimezone=UTC
 #spring.datasource.username=root
 #spring.datasource.password=root
 
